# mypay4-csv-generator-web

./: README.md  _headers  index.html  pyproject.toml
.github/workflows/: ci.yml
py/mypay4_core/: __init__.py  bulk_increase.py  constants.py  csv_flow.py  helpers.py  validators.py  xml_engine.py
tests/: test_bulk_increase.py  test_core.py  test_parity.py
web/: index.html
web/src/: main.js  styles.css
